# fast-and-json-api

./: README.md  example.py  pyproject.toml
pydantic2jsonapi/: __init__.py
tests/: conftest.py  test_conversion.py  test_model.py
